--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <title>
-        Kailash Nath
-    </title>
-    <body>
-        Hello, This is kailash
-    </body>
+
+<body>
+    <h1>Hello World</h1>
+    <p>I'm hosted with GitHub Pages.</p>
+</body>
+
 </html>
